--- a/src/pages/organ/Liver.css
+++ b/src/pages/organ/Liver.css
@@ -1,8 +1,10 @@
-.liver-container {
+  .liver-container {
     padding: 2rem;
     background-color: var(--background-color);
     color: var(--color);
   }
+
+  
   
   .liver-card-buttons {
     display: flex;
@@ -38,4 +40,11 @@
     justify-content: center;
     align-items: center;
 
+}
+
+.liver-model-container {
+  width: 100%;
+  max-width: 100vw;
+  overflow: hidden;
+  position: relative;
 }
