--- a/src/pages/organ/fatty-liver/FattyLiver.css
+++ b/src/pages/organ/fatty-liver/FattyLiver.css
@@ -98,8 +98,8 @@
 }
 
 .fattyliver-main-model {
-  width: 100%;
-  height: 450px;
+  width: 600px;
+  height: 600px;
   display: flex;
   justify-content: center;
   align-items: center;
